tests/src/frontend/typechecking/exhaustiveness/invalid/tuple_nested_literal_wildcard.sk
fun test(): String {
  (1, (true, true)) match {
  | (_, (_, true))
  | (_, (true, _))
  | (_, (_, false))
  | (_, (false, _)) ->
    "Fail\n"
  }
}
